Fix Article Card Overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,7 @@ article {
 }
 
 #section-consult-child article {
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
 }
 
 #section-consult-child .sub-section-teen {
